iRedMail-1.7.2:

+ Supports new distribution release:
    + OpenBSD 7.6

* Dropped distribution release:
    - OpenBSD 7.5

* Improvements:
    - OpenLDAP schema: mail alias account can use 2 more attributes:
      accessPolicy, listModerator.

* Fixed issues:
    - [SQL] Not check domain status while querying per-domain BCC.
    - Incorrect SQL column name in Fail2ban script
      (/usr/local/bin/fail2ban_banned_db). #266
    - Incorrect SOGo SQL table name.

* Updated packages:
    + Roundcube webmail -> 1.6.9
    + netdata -> 2.1.1
    + mlmmjadmin -> 3.2.2
    + iRedAPD -> 5.8.1
    + uwsgi -> 2.0.28 (OpenBSD only)
    + php -> 8.4 (FreeBSD only)

iRedMail-1.7.1:

* Fixed issues:
    - Amavisd cannot save mail subject longer than 255 characters in MariaDB.

* Updated packages:
    + netdata -> 1.46.3
    + Roundcube webmail -> 1.6.8. It fixes 3 security vulnerabilities.
      FYI https://roundcube.net/news/2024/08/04/security-updates-1.6.8-and-1.5.8

iRedMail-1.7.0:

+ Supports new distribution release:
    + Ubuntu 24.04
    + OpenBSD 7.5.

* Dropped distribution release:
    - Debian 11 (bullseye). Please use the latest stable release Debian 12.
    - Ubuntu 20.04 (focal). Please use the latest stable release Ubuntu 24.04
      (recommended) or 22.04 instead.
    - OpenBSD 7.3, 7.4. Please use 7.5 instead.

* Improvements:
    - Track user last login time with PostgreSQL backend.
      FYI https://docs.iredmail.org/track.user.last.login.html
    - Fail2ban now stores started jail names in SQL table `fail2ban.jails`.
    - Disable multi-threaded database reload in ClamAV (with
      parameter "ConcurrentDatabaseReload no").
    - Add new parameter `OCSAdminURL` in sogo.conf for the new SQL table
      `sogo_admin` introduced in SOGo v5.10.0.

* Fixed issues:
    - Fail2ban can not start on OpenBSD after reboot.
      Thanks to wkatsak: https://forum.iredmail.org/post88970.html#p88970
    - Not set correct `compatibility_level` for Postfix. #233