@@ -9,6 +9,15 @@ server {
 
     server_name _;
 
-    # Redirect all insecure http:// requests to https://
-    return 301 https://$host$request_uri;
+    # Allow ACME challenge to be served over HTTP (don't redirect to HTTPS).
+    location ~* ^/.well-known/acme-challenge/ {
+        root PH_HTTPD_WELL_KNOWN_DIR;
+        try_files $uri =404;
+        allow all;
+    }
+
+    # Redirect all insecure http requests to https.
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
